cabal-version:      3.0
name:               spotify-oauth-example
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Peter Murphy
maintainer:         26548438+ptrfrncsmrph@users.noreply.github.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable spotify-oauth
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , aeson
                    , http-api-data
                    , http-client
                    , http-client-tls
                    , servant
		            , servant-client
                    , text
    hs-source-dirs:   app
    default-language: GHC2021
